--- a/styles/chromaText.module.scss
+++ b/styles/chromaText.module.scss
@@ -38,7 +38,7 @@
 	color: var(--lm-black1-white0);
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
-	margin-bottom: 2rem;
+	margin: 2rem 0;
 	
 	h2 {
 		order: 1;
