--- a/styles/commitmentSection.module.scss
+++ b/styles/commitmentSection.module.scss
@@ -21,3 +21,27 @@
 		}
 	}
 }
+
+.commitmentCard {
+	color: var(--lm-black2-white1);
+	font-family: "Open Sans", sans-serif;
+	text-align: center;
+	position: relative;
+	
+	h3 {
+		font-size: 1.4rem;
+	}
+	
+	p {
+		letter-spacing: 1.1px;
+		max-width: 360px;
+		margin: 0 auto;
+	}
+	
+	svg {
+		width: 40%;
+		max-width: 180px;
+		margin: 0 auto;
+		height: auto;
+	}
+}
