Added workaround for SWR not streaming full results

--- a/styles/notes.module.scss
+++ b/styles/notes.module.scss
@@ -121,7 +121,7 @@
 	padding: 16px;
 	display: flex;
 	flex-direction: column;
-	justify-content: start;
+	justify-content: flex-start;
 	
 	> div{
 		flex: 1;
