started about page, created contentcOntainer

--- a/styles/theme/__theme_vars.scss
+++ b/styles/theme/__theme_vars.scss
@@ -6,6 +6,7 @@
 	--nm-black2: #{$black-2}; // formerly charcoal
 	--nm-black3: #{$black-3}; // (formerly used as gray-section-background)
 	--nm-black4: #{$black-4}; // formerly dark-gray
+	--nm-black5: #{$black-5}; // formerly dark-gray
 	
 	--nm-white0: #{$white-0}; // formerly white
 	--nm-white1: #{$white-1}; // formerly gray
