--- a/styles/container.module.scss
+++ b/styles/container.module.scss
@@ -7,6 +7,7 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
+	padding: 2rem 2rem;
 	
 	& > * {
 		width: 100%;
@@ -16,4 +17,9 @@
 			max-width: $screen_desktop;
 		}
 	}
+	
+}
+
+.fullHeight {
+	min-height: 100vh;
 }
