--- a/styles/grid.module.scss
+++ b/styles/grid.module.scss
@@ -2,44 +2,48 @@
 @import "globals/_vars";
 
 .grid {
-	display: flex;
-	flex-direction: column;
+	display: grid;
 	column-gap: 2rem;
 	row-gap: 2rem;
 	margin-bottom: 2rem;
 	
-	@media (querySize("mobile:medium")) {
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: center;
-	}
-	
-	@media (querySize("tablet")) {
-		flex-direction: row;
-		justify-content: space-between;
-		flex-wrap: nowrap;
-		row-gap: 1rem;
-		column-gap: 1rem;
-	}
-	
-	@media (querySize("desktop:large")) {
-		column-gap: 3rem;
-		row-gap: 3rem;
-	}
-	
 	& > div {
 		width: 100%;
-		
-		@media (querySize("mobile:medium")) {
-			width: 30%;
-			min-width: 300px;
-		}
-		
-		@media (querySize("tablet")) {
-			min-width: 0;
-			width: 100%;
-		}
 	}
+}
+
+.gridCol1 {
+	grid-template-columns: repeat(1, 1fr);
+}
+
+.gridCol2 {
+	@extend .gridCol1;
+	
+	@media (querySize("mobile:medium")) {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+.gridCol3 {
+	@extend .gridCol2;
+	
+	@media (querySize("tablet")) {
+		column-gap: 3rem;
+		row-gap: 3rem;
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+.gridCol4 {
+	@extend .gridCol3;
+	
+	@media (querySize("desktop:large")) {
+		grid-template-columns: repeat(4, 1fr);
+	}
+}
+
+.gridColAuto{
+	@extend .gridCol4;
 }
 
 .centeredGrid{
