--- a/styles/articleContent.module.scss
+++ b/styles/articleContent.module.scss
@@ -3,20 +3,41 @@
 @import "globals/_reusables";
 
 .articleContentBlock {
-	margin: 2rem 0;
+	position: relative;
+	margin: 2rem auto;
+	display: block;
+	max-width: 1080px;
+	
+	a {
+		color: var(--special-community);
+		opacity: 1;
+		
+		&:hover{
+			opacity: 0.8;
+		}
+	}
 	
 	header{
+		text-align: center;
+		display: flex;
+		flex-direction: column;
+		font-family: "Open Sans", sans-serif;
+		
+		@media (querySize("mobile:medium")){
+			margin-top: 3rem;
+		}
 		
 		h1{
 			color: var(--nm-black5);
 			font-style: normal;
 			font-weight: 800;
-			font-size: 36px;
+			font-size: 2.25rem;
 			line-height: 113%;
 			font-family: 'Open Sans', sans-serif;
-			margin-bottom: 1.2em;
 			text-transform: uppercase;
-			margin-top: 2em;
+			margin-top: 1rem;
+			margin-bottom: 1.4rem;
+			order: 2;
 			
 			span{
 				color: var(--lm-black1-white0);
@@ -24,27 +45,7 @@
 				width: 100%;
 			}
 			
-			@media (querySize("mobile:large")){
-				margin-top: auto;
-			}
 		}
-		
-		h3{
-			font-size: 20px;
-			margin-bottom: 3em;
-			margin-top: -1.2em;
-			
-			&.by-line{
-				font-size: 18px;
-				margin-bottom: 0;
-			}
-			
-			&.date-line{
-				margin-top: 5px;
-				font-size: 14px;
-			}
-		}
-		
 	}
 	
 	h3{
@@ -58,31 +59,148 @@
 		text-transform: capitalize;
 	}
 	
-	p, ol, ul{
-		@extend .cleanPara;
-		font-style: normal;
-		color: var(--lm-black1-white0);
+}
+
+
+.publishDate {
+	order: 1;
+	color: var(--lm-black2-white3);
+}
+
+.byLine {
+	order: 3;
+	color: var(--lm-black1-white1);
+	margin-bottom: 2rem;
+}
+
+.categories {
+	list-style: none;
+	padding: 0;
+	display: flex;
+	order: 4;
+	width: 100%;
+	align-items: center;
+	justify-content: center;
+	margin-top: 1rem;
+	
+	li {
+		margin: 0 1.5rem;
+		background: var(--lm-white2-black3);
+		color: var(--lm-black2-white3);
+		font-size: 0.8rem;
+		padding: 0.2rem 0.4rem;
+		border-radius: 3px;
+	}
+}
+
+.heroImage {
+	@extend .smoothShadow;
+	max-width: 100%;
+	height: auto;
+	width: auto;
+	display: block;
+	margin: 1rem auto;
+	box-sizing: border-box;
+	position: relative;
+	border-radius: 3px;
+}
+
+.body {
+	font-family: "Open Sans", sans-serif;
+	padding: 1rem 0;
+	color: var(--lm-black1-white1);
+	
+	& > p:nth-child(1){
+		margin-top: 0;
+	}
+	
+	figure {
+		width: 100%;
+		margin: 2rem 0;
 		
-		ol, ul{
-			margin-top: 0;
+		img {
+			@extend .smoothShadow;
+			max-width: 100%;
+			height: auto;
+			width: auto;
+			display: block;
+			box-sizing: border-box;
+			position: relative;
+			border-radius: 3px;
+		}
+		
+		figcaption {
+			width: 100%;
+			text-align: center;
+			font-family: "Open Sans", sans-serif;
+			font-size: 0.8rem;
+			font-style: italic;
+			line-height: 2.6rem;
+			height: 0;
+			display: block;
+			padding-bottom: 1rem;
 		}
 	}
 	
-	& > *{
-		margin: 2.125rem auto;
-		padding: 0 2.125rem;
-		max-width: 800px;
+	[data-embed=youtube]{
+		@extend .smoothShadow;
+		display: flex;
+		flex-direction: column;
+		aspect-ratio: 16/9;
+		overflow: hidden;
+		border-radius: 3px;
+		margin: 2rem 0;
 		
+		iframe {
+			width: 100%;
+			height: 100%;
+		}
 	}
 	
-}
-
-
-.flex__item{
-	justify-content: center;
+	& > p,
+	& > div > p,
+	& > div > ul,
+	& > div > ol{
+		@extend .cleanPara;
+		
+		@media (querySize("desktop")) {
+			font-size: 1.2rem;
+		}
+	}
 	
-	.outlined {
-		border: 1px solid var(--special-brand);
+	@media (querySize("mobile:medium")){
+		padding: 2rem 0;
+		
+		& > p,
+		& > div > p,
+		& > div > ul,
+		& > div > ol {
+			margin: 1.2rem 2rem;
+		}
+		
+		figure figcaption {
+			padding-bottom: 1rem;
+		}
+	}
+	
+	@media (querySize("tablet")){
+		[data-embed=youtube] {
+			margin: 3rem 0;
+		}
+		
+		figure {
+			margin: 3rem 0;
+			
+			figcaption {
+				padding-bottom: 0;
+			}
+		}
+	}
+	
+	@media (querySize("desktop")){
+		[data-embed=youtube],
+		& > div > figure {
+			margin: 4rem 0;
+		}
 	}
 }
-
