--- a/styles/theme/__theme_vars.scss
+++ b/styles/theme/__theme_vars.scss
@@ -16,6 +16,7 @@
 	--lm-white0-black3: #{$white-0};
 	--lm-white3-black3: #{$white-3};
 	--lm-white2-black3: #{$white-2};
+	--lm-white2-black1: #{$white-2};
 	--lm-white1-black3: #{$white-1};
 	--lm-white0-black5: #{$white-0};
 	--lm-white0-black0: #{$white-0};
@@ -53,6 +54,7 @@
 		--lm-white0-black3: #{$black-3};
 		--lm-white3-black3: #{$black-3};
 		--lm-white2-black3: #{$black-3};
+		--lm-white2-black1: #{$black-1};
 		--lm-white1-black3: #{$black-3};
 		--lm-white0-black5: #{$black-5};
 		--lm-white0-black0: #{$black-0};
