--- a/styles/theme/__theme_vars.scss
+++ b/styles/theme/__theme_vars.scss
@@ -38,6 +38,7 @@
 	--lm-black4-white3: #{$black-4};
 	--lm-black3-white3: #{$black-3};
 	--lm-black2-white3: #{$black-2};
+	--lm-black3-white2: #{$black-3};
 	
 	--lm-glass0: #{$white-glass-0}; // (translucent-bg-color)
 	--lm-glass1: #{$white-glass-1};
@@ -76,6 +77,7 @@
 		--lm-black4-white3: #{$white-3};
 		--lm-black3-white3: #{$white-3};
 		--lm-black2-white3: #{$white-3};
+		--lm-black3-white2: #{$white-2};
 		
 		--lm-glass0: #{$black-glass-0};
 		--lm-glass1: #{$black-glass-1};
