--- a/styles/imageBlock.module.scss
+++ b/styles/imageBlock.module.scss
@@ -15,7 +15,8 @@
 		
 		&:nth-of-type(odd) {
 			
-			& > .imageContainer {
+			& > .imageContainer,
+			& > .figureContainer {
 				order: 2;
 			}
 			
@@ -46,7 +47,7 @@
 		padding-top: 26%;
 	}
 	
-	img {
+	& > img {
 		@extend .smoothShadow;
 		border-radius: 3px;
 		position: absolute;
@@ -55,6 +56,58 @@
 		height: 100%;
 		width: 100%;
 		object-fit: cover;
+	}
+	
+}
+
+.figureContainer {
+	width: 100%;
+	position: relative;
+	display: flex;
+	
+	& > figure {
+		margin: 0;
+		
+		& > img {
+			@extend .smoothShadow;
+			border-radius: 3px;
+			position: relative;
+			display: block;
+			margin: 0 auto;
+			width: 100%;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+		
+		figcaption {
+			display: block;
+			text-align: center;
+			font-style: italic;
+			color: var(--lm-black4-white3);
+			padding: 8px 0;
+			font-family: 'Open Sans', sans-serif;
+			letter-spacing: 0.2px;
+			font-size: 0.75rem;
+		}
+	}
+	
+	@media (querySize("mobile:medium")) {
+		
+		& > figure {
+			display: block;
+			width: 100%;
+			
+			& > img {
+				max-height: 350px;
+				width: auto;
+				margin: 0 auto;
+			}
+		}
+	}
+	
+	@media (querySize("mobile:large")){
+		width: 48%;
 	}
 }
 
