--- a/styles/globals/__reusables.scss
+++ b/styles/globals/__reusables.scss
@@ -18,3 +18,18 @@
 	letter-spacing: 0.2px;
 	font-size: 1.125rem;
 }
+
+.adaptiveFrostedGlass {
+	--glass-lightness: 100%;
+	background: hsl(0 0% var(--glass-lightness) / 50%);
+	backdrop-filter: blur(40px) saturate(200%);
+	-webkit-backdrop-filter: blur(40px) saturate(200%);
+	
+	& > * {
+		color: hsl(0 0% calc(100% - var(--glass-lightness)));
+	}
+	
+	@media (prefers-color-scheme: dark) {
+		--glass-lightness: 0%;
+	}
+}
